[gd_scene load_steps=18 format=4 uid="uid://5nqaerlr6t3o"]

[ext_resource type="Script" uid="uid://v3j7rm6p7vat" path="res://scripts/world/world.gd" id="1_bq33v"]
[ext_resource type="Texture2D" uid="uid://h2mirr3npmo3" path="res://assets/sprites/tileset.png" id="2_j2gmx"]
[ext_resource type="PackedScene" uid="uid://dgvlego1w87y" path="res://scenes/player/player.tscn" id="3_1yooq"]
[ext_resource type="PackedScene" uid="uid://w0718rjk2svu" path="res://scenes/obstacles/vehicle_row.tscn" id="4_gb53w"]
[ext_resource type="PackedScene" uid="uid://e3awguknhr0k" path="res://scenes/obstacles/car.tscn" id="5_5qq27"]
[ext_resource type="PackedScene" uid="uid://cof4hf7e3wns1" path="res://scenes/obstacles/truck.tscn" id="6_dlabj"]
[ext_resource type="Script" uid="uid://c03dxy1u0xnsl" path="res://scripts/world/swim_zone.gd" id="7_j2gmx"]
[ext_resource type="Script" uid="uid://iuxn1gd413ko" path="res://scripts/ui/canvas_layer.gd" id="7_srmg5"]
[ext_resource type="PackedScene" uid="uid://b4fcfm5mm8kqa" path="res://scenes/safe_zone/log_row.tscn" id="8_gb53w"]
[ext_resource type="PackedScene" uid="uid://c0ohwvihnqajb" path="res://scenes/safe_zone/log.tscn" id="9_1yooq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fj7yv"]
texture = ExtResource("2_j2gmx")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSet" id="TileSet_tlwt5"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_fj7yv")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yooq"]
size = Vector2(640, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gb53w"]
size = Vector2(8, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5qq27"]
size = Vector2(8, 128)

[sub_resource type="LabelSettings" id="LabelSettings_dwbse"]
font_size = 14
font_color = Color(0, 0, 0, 1)
outline_size = 3

[sub_resource type="LabelSettings" id="LabelSettings_pkg7o"]
font_size = 14
font_color = Color(0, 0, 0, 1)
outline_size = 3

[node name="World" type="Node2D"]
script = ExtResource("1_bq33v")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAsAAAAAAAAAAAABAAsAAAAAAAAAAAACAAsAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAsAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAsAAAAAAAAAAAAQAAsAAAAAAAAAAAARAAsAAAAAAAAAAAASAAsAAAAAAAAAAAATAAsAAAAAAAAAAAATAAoAAAAAAAAAAAASAAoAAAAAAAAAAAARAAoAAAAAAAAAAAAQAAoAAAAAAAAAAAAPAAoAAAAAAAAAAAAOAAoAAAAAAAAAAAANAAoAAAAAAAAAAAAMAAoAAAAAAAAAAAALAAoAAAAAAAAAAAAKAAoAAAAAAAAAAAAJAAoAAAAAAAAAAAAIAAoAAAAAAAAAAAAHAAoAAAAAAAAAAAAGAAoAAAAAAAAAAAAFAAoAAAAAAAAAAAAEAAoAAAAAAAAAAAADAAoAAAAAAAAAAAACAAoAAAAAAAAAAAABAAoAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAkAAAABAAAAAAABAAkAAAABAAAAAAACAAkAAAABAAAAAAADAAkAAAABAAAAAAAEAAkAAAABAAAAAAAFAAkAAAABAAAAAAAGAAkAAAABAAAAAAAHAAkAAAABAAAAAAAIAAkAAAABAAAAAAAJAAkAAAABAAAAAAAKAAkAAAABAAAAAAALAAkAAAABAAAAAAAMAAkAAAABAAAAAAANAAkAAAABAAAAAAAOAAkAAAABAAAAAAAPAAkAAAABAAAAAAAQAAkAAAABAAAAAAARAAkAAAABAAAAAAASAAkAAAABAAAAAAATAAkAAAABAAAAAAAAAAgAAAACAAAAAAABAAgAAAACAAAAAAACAAgAAAACAAAAAAADAAgAAAACAAAAAAAEAAgAAAACAAAAAAAFAAgAAAACAAAAAAAGAAgAAAACAAAAAAAHAAgAAAACAAAAAAAIAAgAAAACAAAAAAAJAAgAAAACAAAAAAAKAAgAAAACAAAAAAALAAgAAAACAAAAAAAMAAgAAAACAAAAAAANAAgAAAACAAAAAAAOAAgAAAACAAAAAAAPAAgAAAACAAAAAAAQAAgAAAACAAAAAAARAAgAAAACAAAAAAASAAgAAAACAAAAAAATAAgAAAACAAAAAAAAAAcAAAACAAAAAAABAAcAAAACAAAAAAACAAcAAAACAAAAAAADAAcAAAACAAAAAAAEAAcAAAACAAAAAAAFAAcAAAACAAAAAAAGAAcAAAACAAAAAAAHAAcAAAACAAAAAAAIAAcAAAACAAAAAAAJAAcAAAACAAAAAAAKAAcAAAACAAAAAAALAAcAAAACAAAAAAAMAAcAAAACAAAAAAANAAcAAAACAAAAAAAOAAcAAAACAAAAAAAPAAcAAAACAAAAAAAQAAcAAAACAAAAAAARAAcAAAACAAAAAAASAAcAAAACAAAAAAATAAcAAAACAAAAAAAAAAYAAAADAAAAAAABAAYAAAADAAAAAAACAAYAAAADAAAAAAADAAYAAAADAAAAAAAEAAYAAAADAAAAAAAFAAYAAAADAAAAAAAGAAYAAAADAAAAAAAHAAYAAAADAAAAAAAIAAYAAAADAAAAAAAJAAYAAAADAAAAAAAKAAYAAAADAAAAAAALAAYAAAADAAAAAAAMAAYAAAADAAAAAAANAAYAAAADAAAAAAAOAAYAAAADAAAAAAAPAAYAAAADAAAAAAAQAAYAAAADAAAAAAARAAYAAAADAAAAAAASAAYAAAADAAAAAAATAAYAAAADAAAAAAAAAAAAAAAFAAAAAAABAAAAAAAFAAAAAAACAAAAAAAFAAAAAAADAAAAAAAFAAAAAAAEAAAAAAAFAAAAAAAFAAAAAAAFAAAAAAAGAAAAAAAFAAAAAAAHAAAAAAAFAAAAAAAIAAAAAAAFAAAAAAAJAAAAAAAFAAAAAAAKAAAAAAAFAAAAAAALAAAAAAAFAAAAAAAMAAAAAAAFAAAAAAANAAAAAAAFAAAAAAAOAAAAAAAFAAAAAAAPAAAAAAAFAAAAAAAQAAAAAAAFAAAAAAARAAAAAAAFAAAAAAASAAAAAAAFAAAAAAATAAAAAAAFAAAAAAAAAAEAAAAEAAAAAAABAAEAAAAEAAAAAAACAAEAAAAEAAAAAAADAAEAAAAEAAAAAAAEAAEAAAAEAAAAAAAFAAEAAAAEAAAAAAAGAAEAAAAEAAAAAAAHAAEAAAAEAAAAAAAIAAEAAAAEAAAAAAAJAAEAAAAEAAAAAAAKAAEAAAAEAAAAAAALAAEAAAAEAAAAAAAMAAEAAAAEAAAAAAANAAEAAAAEAAAAAAAOAAEAAAAEAAAAAAAPAAEAAAAEAAAAAAAQAAEAAAAEAAAAAAARAAEAAAAEAAAAAAASAAEAAAAEAAAAAAATAAEAAAAEAAAAAAATAAIAAAAEAAAAAAASAAIAAAAEAAAAAAARAAIAAAAEAAAAAAAQAAIAAAAEAAAAAAAPAAIAAAAEAAAAAAAOAAIAAAAEAAAAAAANAAIAAAAEAAAAAAAMAAIAAAAEAAAAAAALAAIAAAAEAAAAAAAKAAIAAAAEAAAAAAAJAAIAAAAEAAAAAAAIAAIAAAAEAAAAAAAHAAIAAAAEAAAAAAAGAAIAAAAEAAAAAAAFAAIAAAAEAAAAAAAEAAIAAAAEAAAAAAADAAIAAAAEAAAAAAACAAIAAAAEAAAAAAABAAIAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAAAAAABAAMAAAAEAAAAAAACAAMAAAAEAAAAAAADAAMAAAAEAAAAAAAEAAMAAAAEAAAAAAAFAAMAAAAEAAAAAAAGAAMAAAAEAAAAAAAHAAMAAAAEAAAAAAAIAAMAAAAEAAAAAAAJAAMAAAAEAAAAAAAKAAMAAAAEAAAAAAALAAMAAAAEAAAAAAAMAAMAAAAEAAAAAAANAAMAAAAEAAAAAAAOAAMAAAAEAAAAAAAPAAMAAAAEAAAAAAAQAAMAAAAEAAAAAAARAAMAAAAEAAAAAAASAAMAAAAEAAAAAAATAAMAAAAEAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAKAAUAAAAAAAAAAAALAAUAAAAAAAAAAAAMAAUAAAAAAAAAAAANAAUAAAAAAAAAAAAOAAUAAAAAAAAAAAAPAAUAAAAAAAAAAAAQAAUAAAAAAAAAAAARAAUAAAAAAAAAAAASAAUAAAAAAAAAAAATAAUAAAAAAAAAAAAAAAQAAAAEAAAAAAABAAQAAAAEAAAAAAACAAQAAAAEAAAAAAADAAQAAAAEAAAAAAAEAAQAAAAEAAAAAAAFAAQAAAAEAAAAAAAGAAQAAAAEAAAAAAAHAAQAAAAEAAAAAAAIAAQAAAAEAAAAAAAJAAQAAAAEAAAAAAAKAAQAAAAEAAAAAAALAAQAAAAEAAAAAAAMAAQAAAAEAAAAAAANAAQAAAAEAAAAAAAOAAQAAAAEAAAAAAAPAAQAAAAEAAAAAAAQAAQAAAAEAAAAAAARAAQAAAAEAAAAAAASAAQAAAAEAAAAAAATAAQAAAAEAAAAAAA=")
tile_set = SubResource("TileSet_tlwt5")

[node name="Player" parent="." instance=ExtResource("3_1yooq")]
unique_name_in_owner = true
position = Vector2(304, 338)
GRACE_PERIOD_TIME = 50

[node name="VehicleRowOne" parent="." instance=ExtResource("4_gb53w")]
position = Vector2(0, 288)
vehicle_scene = ExtResource("5_5qq27")
max_vehicles = 8
speed = 150
min_spawn_interval = 0.5
max_spawn_interval = 1.959

[node name="VehicleRowTwo" parent="." instance=ExtResource("4_gb53w")]
position = Vector2(0, 256)
vehicle_scene = ExtResource("6_dlabj")
max_vehicles = 7
speed = 100
direction = -1

[node name="VehicleRowThree" parent="." instance=ExtResource("4_gb53w")]
position = Vector2(0, 224)
vehicle_scene = ExtResource("5_5qq27")
max_vehicles = 9
speed = 250

[node name="VehicleRowFour" parent="." instance=ExtResource("4_gb53w")]
position = Vector2(0, 192)
vehicle_scene = ExtResource("6_dlabj")
direction = -1

[node name="SwimZone" type="Area2D" parent="."]
visible = false
script = ExtResource("7_j2gmx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwimZone"]
position = Vector2(320, 80)
shape = SubResource("RectangleShape2D_1yooq")

[node name="LogRowOne" parent="." instance=ExtResource("8_gb53w")]
position = Vector2(0, 128)
log_scene = ExtResource("9_1yooq")

[node name="LogRowTwo" parent="." instance=ExtResource("8_gb53w")]
position = Vector2(0, 32)
log_scene = ExtResource("9_1yooq")
direction = -1

[node name="DeathZoneLeft" type="Area2D" parent="."]
position = Vector2(-8, 96)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZoneLeft"]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_gb53w")

[node name="DeathZoneRight" type="Area2D" parent="."]
position = Vector2(648, 96)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZoneRight"]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_5qq27")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("7_srmg5")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 149.0
grow_vertical = 0
theme_override_constants/margin_left = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LifeLabel" type="Label" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Lives: 5"
label_settings = SubResource("LabelSettings_dwbse")

[node name="ScoreLabel" type="Label" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Score: 0000"
label_settings = SubResource("LabelSettings_pkg7o")

[connection signal="new_max_row_reached" from="Player" to="." method="_on_player_new_max_row_reached"]
[connection signal="body_entered" from="SwimZone" to="SwimZone" method="_on_body_entered"]
[connection signal="body_exited" from="SwimZone" to="SwimZone" method="_on_body_exited"]
[connection signal="body_entered" from="DeathZoneLeft" to="." method="_on_death_zone_left_body_entered"]
[connection signal="body_entered" from="DeathZoneRight" to="." method="_on_death_zone_right_body_entered"]
